--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,7 +18,7 @@ div#wall div.parent div#tag-5.slick { /*223*/
   display: none;
 }
 
-body div#wall div.parent div:last-child div#tag-6 { /*225*/
+body div#wall div.parent div:last-child div#tag-6 { 
   display: none;
 }
 
